tests/typing/bad/testfile-comparison-3.c

struct S { int a; };
int main() { struct S s1, s2; s1 < s2; }
